webapp/Chart/templates/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nrich-pod
  labels:
      app: nrich-pod
spec:
  containers:
  - name: nrich-nginx 
    image: eu.gcr.io/nrich-terraform/nrich-nginx
    imagePullPolicy: "Always"
    ports:
    - containerPort: 80
  - name: nrich-webapp
    image: eu.gcr.io/nrich-terraform/nrich-webapp
    imagePullPolicy: "Always"
    ports:
    - containerPort: 4444
