webapp/Chart/templates/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nrich-nginx
  labels:
      app: nrich-nginx
spec:
  containers:
  - name: nrich-nginx 
    image: eu.gcr.io/nrich-terraform/nrich-nginx
    imagePullPolicy: "Always"
    ports:
    - containerPort: 80
