webapp/Chart/templates/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nginx-clusterip
spec:
  selector:
    app: nrich-webapp
  ports:
  - name: http
    port: 80
    targetPort: 4444
  type: ClusterIP
