webapp/Chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrich-webapp-ingress
spec:
  rules:
  - host: nrich-webapp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-nginx-clusterip
            port:
              name: http
